09.06
Created DAOLayers with a simple ConnectionFactory. ConnectionFactory uses HikariCP framework (Connection Pool)
Added JAXB Annotations to Doctor and Doctors classes.
Created a GenerateXMLsUsingJAXB that writes one doctor (by id) or all the doctors into an XML file
Added log4j2 logger project-wide

10.06
Added JAXB Annotations to Nurse/Nurses.
Added a Generic method that accepts ModelOBJ and creates a xml out of it

11.06
Finished with JAXB Annotations for AdminP/AdminPs
Added Generic GenerateObjFromXMLUsingJAXB Unmarshaller (accepts fileName and obj class - returns object of that class)

15.06
Added JAXB XSD schemagen. Can be used with mvn clean install. Generates XSD Schema from java classes

//Leftover homework. Add parser with DOM. Add extended parses for date and lists

//TODO Add to the GenerateXMLsUsingJAXB - method to extract all Nurses and AdminPs