@@ -1,5 +1,6 @@
 package org.DAO.ModelObjs;
 
+
 import jakarta.xml.bind.annotation.XmlAttribute;
 import jakarta.xml.bind.annotation.XmlElement;
 import jakarta.xml.bind.annotation.XmlRootElement;
