@@ -14,6 +14,7 @@ Added Generic GenerateObjFromXMLUsingJAXB Unmarshaller (accepts fileName and obj
 
 15.06
 Added JAXB XSD schemagen. Can be used with mvn clean install. Generates XSD Schema from java classes
+Had to remove the whole jakarta dependencies. Added
 
 //Leftover homework. Add parser with DOM. Add extended parses for date and lists
 
